--- a/ex22.tex
+++ b/ex22.tex
@@ -1,19 +1,32 @@
-\chapter{Exercise 22: Advanced Flow Control}
+\chapter{Exercise 22: Advanced Data Types And Flow Control}
 
-You know how the stack works, and how scoping works in your C programs.  With
-that concept in place, you can now learn about all the kinds of "flow control"
-C supports.  "Flow control" just means controlling how the execution of the
-program "flows" with \ident{if-statements}, \ident{for-loops}, etc.  In this
-exercise you'll get information and you'll be expected to spend time memorizing
-it so it's solid in your mind.
+This exercise will be a complete compendium of the available C data types and
+flow control structures you can use.  It will work as a reference to complete
+your knowledge, and won't have any code for you to enter.  I'll have you
+memorize some of the information by creating flash cards so you can get 
+the important concepts solid in your mind.
 
-\section{Do-While}
+\section{Available Data Types}
 
-\section{Break And Continue}
 
-\section{Goto and Labels}
+\subsection{Type Conversion}
 
-\section{Extra Credit}
+
+\subsection{Math Operations}
+
+
+\subsection{Boolean Operations}
+
+
+\section{Available Control Structures}
+
+\subsection{Do-While}
+
+\subsection{Break And Continue}
+
+\subsection{Goto and Labels}
+
+\subsection{Extra Credit}
 
 \begin{enumerate}
 \item Get this information solid as well by making flash cards and spending 15 
