--- a/ex20.tex
+++ b/ex20.tex
@@ -1,13 +1,14 @@
 \chapter{Exercise 20: Zed's Awesome Debug Macros}
 
 There is a constant problem in C that you have been dancing around but which I
-am going to solve in this exercise.  You can thank me later when you realize
-how insanely awesome these macros are.  Right now you won't realize how awesome
-they are, so you'll just have to use them and then you can walk up to me one
-day and say, "Zed, those Debug Macros were the bomb. I owe you my first born
-child because you saved me a decade of heartache and prevented me from killing
-myself more than once. Thank you good sir, here's a million dollars and the
-original Snakehead Telecaster prototype signed by Leo Fender."
+am going to solve in this exercise using a set of macros I developed.  You can
+thank me later when you realize how insanely awesome these macros are.  Right
+now you won't realize how awesome they are, so you'll just have to use them and
+then you can walk up to me one day and say, "Zed, those Debug Macros were the
+bomb. I owe you my first born child because you saved me a decade of heartache
+and prevented me from killing myself more than once. Thank you good sir, here's
+a million dollars and the original Snakehead Telecaster prototype signed by Leo
+Fender."
 
 Yes, they are that awesome.
 
