--- a/ex20.tex
+++ b/ex20.tex
@@ -33,7 +33,7 @@ write more and more C code you'll write code with the pattern:
 \item and print out an error message that hopefully helps.
 \end{enumerate}
 
-This means for every function call (and yes, \emph{every}) function
+This means for every function call (and yes, \emph{every} function)
 you are potentially writing 3-4 more lines just to make sure it worked.
 That doesn't include the problem of cleaning up all of the junk you've
 built to that point.  If you have 10 different structures, 3 files, and
