Mention the errno outputs.

--- a/ex20.tex
+++ b/ex20.tex
@@ -151,7 +151,9 @@ this:
 \end{code}
 
 See how it reports the exact line number where the \func{check} failed?
-That's going to save you hours of debugging later.
+That's going to save you hours of debugging later.  See also how it 
+prints the error message for you when \ident{errno} is set? Again,
+that will save you hours of debugging.
 
 \section{Extra Credit}
 
