minor typos in ex16

--- a/ex16.tex
+++ b/ex16.tex
@@ -23,9 +23,9 @@ parts it contains, and your job is to write out what each line does.
     access to some new functions.  What does each give you?
 \item [struct Person] This is where I'm creating a structure that
     has 4 elements to describe a person.  The final result is a
-    new compound type that let's me reference these elements all
+    new compound type that lets me reference these elements all
     as one, or each piece by name.  It's similar to a row of a database
-    table or an class in an OOP language.
+    table or a class in an OOP language.
 \item[function Person\_create] I need a way to create these structures
     so I've made a function to do that.  Here's the important 
     things this function is doing:
