removing an extra (?) "the"

--- a/ex16.tex
+++ b/ex16.tex
@@ -61,7 +61,7 @@ parts it contains, and your job is to write out what each line does.
     \begin{enumerate}
     \item Create two people, \ident{joe} and \ident{frank}.
     \item Print them out, but notice I'm using the \verb|%p| 
-        format so you can see the \emph{where} the program
+        format so you can see \emph{where} the program
         has actually put your struct in memory.
     \item Age both of them by 20 years, with changes to their
         body too.
