Fix title of source listing ex4.sh.

--- a/ex4.tex
+++ b/ex4.tex
@@ -45,7 +45,7 @@ the following process:
 Here's a script of me doing this very process, which I want you to
 try to replicate:
 
-\begin{code}{ex4.c}
+\begin{code}{ex4.sh}
 << d['code/ex4.sh|pyg|l'] >>
 \end{code}
 
