Alter the title a bit.

--- a/book.tex
+++ b/book.tex
@@ -3,7 +3,7 @@
 
 \title{
     Learn C The Hard Way\\
-    \textit{A Clear \& Direct Guide To Modern C Programming}
+    \textit{A Clear \& Direct Introduction To Modern C Programming}
 }
 \author{Zed A. Shaw}
 \date{July 2011}
