--- a/preamble.tex
+++ b/preamble.tex
@@ -3,7 +3,7 @@
 \usepackage{style}
 %\usepackage{palatino}
 \usepackage[
-    pdftitle={Learn C The Hard Way: A Clear \& Direct Guide To Modern C Programming},
+    pdftitle={Learn C The Hard Way: A Clear \& Direct Introduction To Modern C Programming},
     pdfauthor={Zed A. Shaw},
     pdfsubject={An introduction to C programming for people who know one other language.},
     pdfkeywords={C, Programming},
