Structure for ex21 and ex22

--- a/ex21.tex
+++ b/ex21.tex
@@ -1,23 +1,41 @@
-\chapter{Exercise 21: Scope And The Stack}
+\chapter{Exercise 21: Advanced Data Types And Flow Control}
 
-The concept of "scope" seems to confuse quite a few people when they first
-start programming.  Originally it came from the use of the system stack
-(which we lightly covered earlier) and how it was used to store temporary
-variables.  In this exercise, we'll learn about scope by learning about
-how a stack data structure works, and then feeding that concept back in
-to how modern C does scoping.
+This exercise will be a complete compendium of the available C data types and
+flow control structures you can use.  It will work as a reference to complete
+your knowledge, and won't have any code for you to enter.  I'll have you
+memorize some of the information by creating flash cards so you can get 
+the important concepts solid in your mind.
 
-We'll also learn the kinds of things to avoid when dealing with the
-scoping rules that C has.
+\section{Available Data Types}
 
-
-\section{What You Should See}
-
-
-\section{How To Break It}
-
-
-\section{Extra Credit}
+\begin{description}
+\item[(unsigned) int]
+\item[double]
+\item[float]
+\item[(unsigned) char]
+\end{description}
 
 
+\subsection{Type Conversion}
 
+
+\subsection{Math Operations}
+
+
+\subsection{Boolean Operations}
+
+
+\section{Available Control Structures}
+
+\subsection{Do-While}
+
+\subsection{Break And Continue}
+
+\subsection{Goto and Labels}
+
+\subsection{Extra Credit}
+
+\begin{enumerate}
+\item Get this information solid as well by making flash cards and spending 15 
+    minutes a day memorizing it.
+\end{enumerate}
