--- a/ex22.tex
+++ b/ex22.tex
@@ -1,34 +1,21 @@
-\chapter{Exercise 22: Advanced Data Types And Flow Control}
+\chapter{Exercise 22: Scope And The Stack}
 
-This exercise will be a complete compendium of the available C data types and
-flow control structures you can use.  It will work as a reference to complete
-your knowledge, and won't have any code for you to enter.  I'll have you
-memorize some of the information by creating flash cards so you can get 
-the important concepts solid in your mind.
+The concept of "scope" seems to confuse quite a few people when they first
+start programming.  Originally it came from the use of the system stack
+(which we lightly covered earlier) and how it was used to store temporary
+variables.  In this exercise, we'll learn about scope by learning about
+how a stack data structure works, and then feeding that concept back in
+to how modern C does scoping.
 
-\section{Available Data Types}
-
-
-\subsection{Type Conversion}
-
-
-\subsection{Math Operations}
+We'll also learn the kinds of things to avoid when dealing with the
+scoping rules that C has.
 
 
-\subsection{Boolean Operations}
+\section{What You Should See}
 
 
-\section{Available Control Structures}
+\section{How To Break It}
 
-\subsection{Do-While}
 
-\subsection{Break And Continue}
+\section{Extra Credit}
 
-\subsection{Goto and Labels}
-
-\subsection{Extra Credit}
-
-\begin{enumerate}
-\item Get this information solid as well by making flash cards and spending 15 
-    minutes a day memorizing it.
-\end{enumerate}
