Fix up the introduction to be a little stronger.

--- a/introduction.tex
+++ b/introduction.tex
@@ -85,7 +85,7 @@ If you follow these rules, do everything in the book, and still can't
 code C then you at least tried.  It's not for everyone, but the act
 of trying will make you a better programmer.
 
-\section*{How To Learn From This Book}
+\section*{The Core Competencies}
 
 I'm going to guess that you come from a language for weaklings.  One of those
 "usable" languages that lets you get away with sloppy thinking and half-assed
