Dexy hates those.

--- a/ex21.tex
+++ b/ex21.tex
@@ -182,7 +182,7 @@ raw bits in integers.
 
 \begin{description}
 \item[\& (binary)] Bitwise and.
-\item[<<] Shift left.
+\item[\<\<] Shift left.
 \item[>>] Shift right.
 \item[\^]
 \item[|]
@@ -216,7 +216,7 @@ can also be combined into a compound assignment operator.
 \item[+=]
 \item[-=]
 \item[/=]
-\item[<<=]
+\item[\<\<=]
 \item[>>=]
 \item[\^=]
 \item[|=]
